Adapt Interface such that JSON files can be accessed inside JAR